exports[`test SvgIcons can be hovered 1`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "#000",
      "height": "24px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.25s linear 0ms",
      "width": "24px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px" />
`;

exports[`test SvgIcons can be hovered 2`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "#000",
      "height": "24px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.25s linear 0ms",
      "width": "24px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px" />
`;

exports[`test SvgIcons can be set to be in a hovered state 1`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "blue",
      "height": "24px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.25s linear 0ms",
      "width": "24px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px" />
`;

exports[`test SvgIcons can have a color 1`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "blue",
      "height": "24px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.5s linear 0ms",
      "width": "24px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px" />
`;

exports[`test SvgIcons can have a width and are always rendered a squares 1`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "#000",
      "height": "100px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.25s linear 0ms",
      "width": "100px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px" />
`;

exports[`test will render an SVG element with its children and the correct viewbox value of \`0 0 24 24\` 1`] = `
<svg
  data-radium={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "fill": "#000",
      "height": "24px",
      "margin": 0,
      "padding": "0px",
      "transition": "fill 0.25s linear 0ms",
      "width": "24px",
    }
  }
  viewBox="0 0 24 24"
  x="0px"
  y="0px">
  <path
    d="M12,4c-4.4,0-8,3.6-8,8s3.6,8,8,8s8-3.6,8-8S16.4,4,12,4z M17,13h-4.1v3.9h-2V13H7v-2h3.9V6.9h2V11H17V13z" />
</svg>
`;
